--- a/docker-compose-remote.yml
+++ b/docker-compose-remote.yml
@@ -1,9 +1,7 @@
 version: '3.2'
 services:
   legacywebshop:
-    build:
-      context: ./
-      dockerfile: ./docker/Dockerfile
+    image: mavogel/hska-vis-legacywebshop
     ports:
       - "8888:8080"
     networks:
@@ -12,9 +10,7 @@ services:
               - legacywebshop
 
   web-shop-db-image:
-    build:
-      context: ./
-      dockerfile: ./docker/DockerfileMySQL
+    image: mavogel/hska-vis-web-shop-db-image
     volumes:
       - "./.data/db:/var/lib/mysql"
     environment:
