--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,10 @@ services:
   products-core:
     build: productcore/
     ports: 
-      - 8002:8002 
+      - 8012:8012 
     depends_on:
       - eureka
+      - turbine
     links:
       - eureka
     restart: always
@@ -23,4 +24,4 @@ services:
       - eureka
     links:
       - eureka
-    restart: on-failure
+    restart: always
