--- a/turbine/src/main/resources/application.yml
+++ b/turbine/src/main/resources/application.yml
@@ -16,5 +16,9 @@ eureka:
 
 turbine:
   clusterNameExpression: new String("default")
-  appConfig: PRODUCTS-COMP-SERVICE
+  appConfig: productscomposite-service
   combineHostPort: true
+
+hystrix:
+  dashboard:
+    proxy-stream-allow-list: "*"
