--- a/productcomposite/src/main/resources/application.yml
+++ b/productcomposite/src/main/resources/application.yml
@@ -7,9 +7,14 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
   instance:
     preferIpAddress: true
     leaseRenewalIntervalInSeconds: 5
     metadataMap:
       instanceId: "${spring.application.name}:${random.value}"
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
