--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,17 @@ services:
       services-network-01:
         aliases:
           - zuul
+  client:
+    build:
+      context: client/
+      dockerfile: ./docker/Dockerfile
+    ports:
+      - "8080:8080"
+      - "8000:8000"
+    networks:
+        services-network-01:
+          aliases:
+            - zuul
 
 networks:
   services-network-01:
