oauth not working

--- a/zuul/src/main/resources/application.yml
+++ b/zuul/src/main/resources/application.yml
@@ -18,4 +18,5 @@ eureka:
     category-core-service:
       path: /category-core-service/**
     user-core-service:
-      path: /user-core-service/**
+      path: /** 
+#/user-core-service/**
