--- a/productcomposite/src/main/resources/application.yml
+++ b/productcomposite/src/main/resources/application.yml
@@ -18,3 +18,10 @@ management:
     web:
       exposure:
         include: "*"
+
+security:
+  oauth2:
+    resource:
+      filter-order: 3
+      jwk:
+        key-set-uri: http://user-core:8001/oauth2/keys #oauth/check_token
